--- a/calculator/src/components/style/style.css
+++ b/calculator/src/components/style/style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 #kol {
   width: 100%;
   height: 500px;
@@ -7,22 +13,41 @@
 }
 
 #calculator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   border-radius: 10px;
   padding: 5px;
-  width: 55vw;
+  width: 17.5rem;
   height: 25rem;
 }
 #calculator div#display {
-  height: 29%;
+  height: 25%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+#calculator div#display p#currentOP {
+  color: white;
+  font-weight: 600;
+  font-size: 2.4rem;
+}
+#calculator div#display p#previousOP {
+  font-weight: 500;
+  color: white;
+  font-size: 1.5rem;
 }
 #calculator div#teclas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   height: 70%;
   gap: 5px;
-  padding: 2px;
-  width: 100%;
+  padding: 7px;
+  width: 98%;
 }
 #calculator div#teclas button {
   background-color: rgba(24, 24, 24, 0.877);
@@ -30,8 +55,8 @@
   font-weight: 600;
   font-size: 20px;
   border: none;
-  height: 95%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   border-radius: 100%;
   transition: all ease-in 0.099s;
 }
